# RIOT-exercises

./: .gitignore  .gitmodules  README.md  lab_workarounds.mk
00-getting-started/: README.md
01-hello-world/: Makefile  README.md
01r-hello-world/: README.md
02-timers/: Makefile
02r-timers/: README.md
03-shell/: Makefile
03r-shell/: README.md
04-saul/: Makefile
05-gpios/: Makefile
06-threads/: Makefile
07-events/: Makefile
08-coap-basic/: Makefile  README.md
08-coap-basic/.app/: Makefile
09-netapi/: Makefile
10-sock/: Makefile
rust01-hello-world/: Cargo.toml  Makefile  README.md
rust02-timers/: Cargo.toml  Makefile  README.md
rust03-shell/: Cargo.toml  Makefile  README.md
rust04-saul/: Cargo.toml  Makefile  README.md
rust05-gpio/: Cargo.toml  Makefile  README.md
rust05-gpio-baremetal/: README.md  blink.license.md
rust05-gpio-baremetal/blink/: Cargo.toml
rust05-gpio-baremetal/blink/.cargo/: config.toml
rust05-gpio-baremetal/blink/src/: main.rs
rust05-gpio/src/: lib.rs
rust06-threads/: Cargo.toml  Makefile  README.md
rust06-threads/src/: lib.rs
