[package]
name = "pwm-blinky-demo"
version = "0.1.0"
authors = ["Christopher Hunt <huntchr@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = { version = "0.7.3", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
rtt-target = "0.5.0"
nb = "1.0.0"
nrf52840-hal = { version = "0.18.0", features = ["rt"] }
